syntax = "proto3";

package platform;

import "config.proto";

option go_package = "proto/pb";

message BuildVPNRequest { Project desiredState = 1; }
message BuildVPNResponse {
  Project desiredState = 1;
  string errorMessage = 2;
}

service WireguardianService {
  rpc BuildVPN(BuildVPNRequest) returns (BuildVPNResponse);
}
